// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Common features test Abstract methods should remove abstract methods 1`] = `
"class A {
  constructor(name) {
    this.name = name;
  }
}
"
`;

exports[`Common features test Interface removal should ignore export declare 1`] = `
"alert(1);
alert(2);
"
`;

exports[`Common features test Interface removal should ignore export declare 2`] = `
"alert(1);
"
`;

exports[`Common features test Interface removal should remove export interface 1`] = `
"console.log(1);
console.log(2);
"
`;

exports[`Common features test Interface removal should remove interface 1`] = `
"alert(1);
alert(2);
"
`;

exports[`Common features test Should remove declare should remove consts 1`] = `
"alert(1);
alert(2);
"
`;

exports[`Common features test Various should handle NotNullExpression 1`] = `
"function hey(res) {
  return res;
}
"
`;

exports[`Common features test Various should remove type assertion 1`] = `
"if (_e.target === 1) {}
"
`;
